--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://www.sharing-portfolio.site/" />
     <meta property="og:title" content="Sharing Portfolio" />
     <meta property="og:description" content="作成したポートフォリオをみんなに公開しよう!!" />
-    <meta property="og:image" content="../assets/images/sp-topimage.png" />
+    <meta property="og:image" content="https://sharing-portfolio-photo.s3-ap-northeast-1.amazonaws.com/thumbnail/sp-topimage.png" />
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
